--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "framer-motion": "^12.5.0",
     "next": "^14.2.24",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "eslint": "^8",
