--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,11 +12,10 @@
     "@heroui/react": "^2.7.5",
     "classnames": "^2.5.1",
     "framer-motion": "^12.5.0",
-    "next": "^14.2.24",
+    "next": "^15.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.5.0",
-    "sweetalert2": "^11.17.2"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "eslint": "^8",
