--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
-    "sweetalert2": "^11.17.2"
+    "react-multi-carousel": "^2.8.6"
   },
   "devDependencies": {
     "eslint": "^8",
