--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,11 @@
     "express-rate-limit": "^7.4.1",
     "generate-password": "^1.7.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.1",
     "mysql2": "^3.11.3",
     "nodemailer": "^6.9.15",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.25.6",
