Actualizar configuración de base de datos y corregir importaciones en la página de Armario

--- a/backend/.env
+++ b/backend/.env
@@ -8,17 +8,17 @@ PASS=ttye gyog fcik sksq
 # Descomenta la configuración que quieras usar y comenta la otra
 
 # BASE DE DATOS LOCAL (MySQL local)
-#DATABASE=miloker
-#DB_USER_NAME=root
-#DB_PASS=12345
-#DB_PORT=3306
-#DB_HOST=localhost
+DATABASE=miloker
+DB_USER_NAME=root
+DB_PASS=12345
+DB_PORT=3306
+DB_HOST=localhost
 
 # BASE DE DATOS AWS (Producción)
-DATABASE=miloker
-DB_USER_NAME=admin
-DB_PASS=Conejito22*
-DB_PORT=3306
-DB_HOST=miloker.chemoooqwid3.us-east-2.rds.amazonaws.com
+#DATABASE=miloker
+#DB_USER_NAME=admin
+#DB_PASS=Conejito22*
+#DB_PORT=3306
+#DB_HOST=miloker.chemoooqwid3.us-east-2.rds.amazonaws.com
 
 JWT_SECRET=GHJKLÑFGHJK
