--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.5.1",
     "framer-motion": "^12.5.0",
     "next": "^15.2.4",
+    "next-auth": "^4.24.11",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
