Agregar configuración de CORS y JWT en el archivo .env y actualizar las referencias en config.js y app.js

--- a/backend/.env
+++ b/backend/.env
@@ -21,4 +21,19 @@ DB_HOST=localhost
 #DB_PORT=3306
 #DB_HOST=miloker.chemoooqwid3.us-east-2.rds.amazonaws.com
 
+# ====================================
+# CONFIGURACIÓN DE CORS
+# ====================================
+FRONTEND_URL='http://192.168.1.254:3000'
+FRONTEND_LOCAL_IP='http://localhost:3000'
+
+# ====================================
+# CONFIGURACIÓN DE CORS
+# ====================================
+FRONTEND_URL='http://192.168.1.254:3000'
+FRONTEND_LOCAL_URL='http://localhost:3000'
+
+# ====================================
+# CONFIGURACIÓN DE JWT
+# ====================================
 JWT_SECRET=GHJKLÑFGHJK
