--- a/backend/.env
+++ b/backend/.env
@@ -8,18 +8,18 @@ PASS=ttye gyog fcik sksq
 # Descomenta la configuración que quieras usar y comenta la otra
 
 # BASE DE DATOS LOCAL (MySQL local)
-DATABASE=miloker
-DB_USER_NAME=root
-DB_PASS=12345
-DB_PORT=3306
-DB_HOST=localhost
+#DATABASE=miloker
+#DB_USER_NAME=root
+#DB_PASS=12345
+#DB_PORT=3306
+#DB_HOST=localhost
 
 # BASE DE DATOS AWS (Produccin)
-#DATABASE=miloker
-#DB_USER_NAME=admin
-#DB_PASS=Conejito22*
-#DB_PORT=3306
-#DB_HOST=miloker.chemoooqwid3.us-east-2.rds.amazonaws.com
+DATABASE=miloker
+DB_USER_NAME=admin
+DB_PASS=Conejito22*
+DB_PORT=3306
+DB_HOST=miloker.chemoooqwid3.us-east-2.rds.amazonaws.com
 
 # ====================================
 # CONFIGURACIÓN DE CORS
@@ -31,3 +31,9 @@ FRONTEND_LOCAL_URL='http://localhost:3000'
 # CONFIGURACIÓN DE JWT
 # ====================================
 JWT_SECRET=GHJKLÑFGHJK
+
+# ====================================
+# USUARIO ADMINISTRADOR INICIAL
+# ====================================
+ADMIN_EMAIL=admin@miloker.com
+ADMIN_PASSWORD=Admin123!
