Actualizar credenciales de correo y contraseña en el archivo de configuración

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 PORT=4000
-EMAIL=yeschinchilla22@gmail.com
-PASS=ttye gyog fcik sksq
+EMAIL=soportectpliverpool@gmail.com
+PASS=cmsu rgid sios iqhx
 
 # ====================================
 # CONFIGURACIÓN DE BASE DE DATOS
