Actualizar configuración de CORS y aumentar límites de tamaño para archivos en multer

--- a/backend/.env
+++ b/backend/.env
@@ -24,7 +24,7 @@ DB_HOST=miloker.chemoooqwid3.us-east-2.rds.amazonaws.com
 # ====================================
 # CONFIGURACIÓN DE CORS
 # ====================================
-FRONTEND_URL='http://192.168.1.254:3000'
+FRONTEND_URL='http://frontend.miloker.ctpliv'
 FRONTEND_LOCAL_URL='http://localhost:3000'
 
 # ====================================
