Actualizar URLs en la configuración del entorno y ajustar patrones remotos para imágenes

--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,9 +1,9 @@
 # URL para el resto de la aplicación (servicios, fetch, etc.)
-NEXT_PUBLIC_API_URL=http://tu-dns-especifico:4000
+NEXT_PUBLIC_API_URL=http://api.miloker.ctpliv
 
 # URL específica para NextAuth (debe ser localhost)
 NEXTAUTH_API_URL=http://localhost:4000
 
 # Configuración de NextAuth
 NEXTAUTH_SECRET="YKlkT4nW4GYnHvQBmGNWzbf2sFBy5vAdz604RMwLwPQ="
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=http://frontend.miloker.ctpliv
